# oci-compat-schema

./: Cargo.toml  justfile  schema.json
schema-gen/: Cargo.toml
schema-gen/src/: main.rs
src/: lib.rs
